test/expected/declare_cf_v-c.out
declare f as const function returning void
        ^
9: error: function can not be "const"
